[package]
name = "rustdht"
version = "0.1.0"
authors = ["Elliott Mahler <join.together@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "*"
num-complex = "*"
rustfft = "*"
transpose = "*"

[dev-dependencies]
rand = "0.6"