[package]
name = "rustdht"
version = "0.1.0"
authors = ["Elliott Mahler <join.together@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "~5"
num-complex = "0.3"
num-traits = "0.2"
num-integer = "^0.1.40"
strength_reduce = "^0.2.1"
transpose = "0.2"
primal-check = "0.3.1"

[dev-dependencies]
rand = "0.6"